@@ -24,7 +24,7 @@ repos:
         args: [--max-line-length=79]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.942'
+    rev: 'v0.950'
     hooks:
       - id: mypy
         additional_dependencies: [types-all]
