@@ -309,6 +309,10 @@ class TestBasics(unittest.TestCase):
         self.assertIn("ZA", holidays.list_supported_countries())
         self.assertIn("CA", holidays.list_supported_countries()["US"])
 
+    def test_list_supported_financial(self):
+        self.assertIn("ECB", holidays.list_supported_financial())
+        self.assertIn("NYSE", holidays.list_supported_financial())
+
     def test_radd(self):
         self.assertRaises(TypeError, lambda: 1 + holidays.US())
 
