@@ -4,6 +4,8 @@ Version 0.14
 Released ????? ??, ????
 
 - Drop support for EOL Python 3.6 #328 (hugovk, dr-p)
+- Added financial markets support: ECB and NYSE, list_supported_financial() method (dr-p)
+- Support for NY Stock Exchange #651, #458 (nadime, dr-p)
 - Support for Malta #612, #630 (rafelbev)
 - Ireland as standalone country #636, #639 (TeoTN, dr-p, javicalle)
 - Australia fixes #631 (jeremychrimes)
